--- a/.babelrc
+++ b/.babelrc
@@ -5,15 +5,11 @@
       "env",
       {
         "targets": {
-          "node": 4.0,
-          "uglify": true,
+          "node": 8.0,
+          "uglify": true
         }
       }
     ]
   ],
-  "plugins": [
-    "transform-runtime",
-    "transform-object-rest-spread",
-    "transform-async-to-generator"
-  ]
+  "plugins": ["transform-runtime", "transform-object-rest-spread", "transform-async-to-generator"]
 }
