--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "gatsby-source-prismic",
-  "version": "1.2.0",
-  "description": "Gatsby source plugin for building websites using prismic.io as a data source",
+  "name": "gatsby-source-prismic-stoutlabs",
+  "version": "1.0.1",
+  "description": "Gatsby source plugin for building websites using prismic.io as the data source",
   "scripts": {
     "prepublish": "npm run build",
     "build": "babel src --out-dir .",
-    "format": "prettier --trailing-comma all --no-semi --single-quote --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "babel -w src --out-dir ."
   },
-  "homepage": "https://github.com/angeloashmore/gatsby-source-prismic",
+  "homepage": "https://github.com/stoutlabs/gatsby-source-prismic-stoutlabs",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angeloashmore/gatsby-source-prismic.git"
+    "url": "https://github.com/stoutlabs/gatsby-source-prismic-stoutlabs"
   },
   "keywords": [
     "gatsby",
     "gatsby-plugin",
     "gatsby-source-plugin"
   ],
-  "author": "Angelo Ashmore <angelo.ashmore@walltowall.com>",
+  "author": "Daniel Stout <daniel@stoutlabs.com>",
   "license": "MIT",
   "dependencies": {
     "asyncro": "^3.0.0",
     "gatsby-node-helpers": "^0.3.0",
-    "gatsby-source-filesystem": "^1.5.35",
+    "gatsby-source-filesystem": "^2.0.1",
     "prismic-dom": "^2.1.0",
-    "prismic-javascript": "^1.1.5"
+    "prismic-javascript": "^1.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "prettier": "^1.5.3"
+    "babel-preset-env": "^1.7.0"
   }
 }
